h-8/23-dpl-nginx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: index
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: index
          configMap:
            name: pod-vars
