h-8/23-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  selector:
    app: nginx
  ports:
    - name: front
      protocol: TCP
      port: 80
      targetPort: 80
