h-8/23-ing.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kuberlab.local
      secretName: nginx-tls-sec
  rules:
    - host: kuberlab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-svc
                port:
                  number: 80
